feat: add vendored dependencies management with ImGui integration
Implement SDL3, SDL3_ttf and ImGui as vendored dependencies using
FetchContent.

--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,8 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 /bin*
-
+include/vendored/*
+!include/vendored/vendored.cmake
 ### CMake Patch ###
 CMakeUserPresets.json
 
