--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,20 +6,36 @@ project(GameEngine
 )
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3-shared)
 
 add_executable(GameEngine)
 target_sources(GameEngine
     PRIVATE
     src/main.cpp
 )
+
+include(include/vendored/vendored.cmake)
+
 target_compile_features(GameEngine PUBLIC cxx_std_17)
-target_compile_definitions(GameEngine PUBLIC SDL_MAIN_USE_CALLBACKS)
-target_compile_options(GameEngine PUBLIC
-  $<$<CXX_COMPILER_ID:MSVC>:/W4>
-  $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic -Wno-unused-parameter>
+target_compile_definitions(GameEngine
+                           PUBLIC SDL_MAIN_USE_CALLBACKS
+                           PUBLIC IMGUI_ENABLE_DOCKING=
+                           PUBLIC IMGUI_DEFINE_MATH_OPERATORS=
+                           PUBLIC IMGUI_IMPL_API=
 )
-target_link_libraries(GameEngine PRIVATE SDL3::SDL3)
+target_compile_options(GameEngine
+    PUBLIC
+    $<$<CXX_COMPILER_ID:MSVC>:/W4>
+    $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic -Wno-unused-parameter>
+)
+
+add_dependencies(GameEngine imgui_sdl3)
+target_link_libraries(GameEngine
+    PRIVATE
+    SDL3::SDL3
+    SDL3_ttf::SDL3_ttf
+    imgui_sdl3
+)
+
 set_target_properties(GameEngine
     PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
