feat(resource manager): adds manager for textures adds a resource manager for loading and unloading assets, as well as for lazily creating textures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ target_link_libraries(GameEngine
     PRIVATE
     SDL3::SDL3
     SDL3_ttf::SDL3_ttf
+    SDL3_image::SDL3_image
     imgui_sdl3
     spdlog
 )
